--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 base="light"
-primaryColor="#e6e0cd"
+primaryColor="#9A8967"
 backgroundColor = "#ffffff"
 secondaryBackgroundColor="#cbba99"
 textColor = "#000000"
