--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,8 +1,8 @@
-[theme]
-base="light"
-primaryColor="#9A8967"
-backgroundColor = "#ffffff"
-secondaryBackgroundColor="#cbba99"
-textColor = "#000000"
-font = "sans serif"
+
+    [theme]
+    primaryColor = "#9A8967"
+    backgroundColor = "#ffffff"
+    secondaryBackgroundColor = "#cbba99"
+    textColor = "#000000"
+    font = "sans serif"
 
